--- a/carousel.css
+++ b/carousel.css
@@ -3,7 +3,7 @@
 /* Padding below the footer and lighter body text */
 
 body {
-    padding-bottom: 40px;
+    padding-bottom: 30px;
     color: #5a5a5a;
 }
 
@@ -129,5 +129,16 @@ body {
 @media (min-width: 992px) {
     .featurette-heading {
         margin-top: 120px;
+    }
+}
+
+@media (max-width: 767px) {
+    #myCarousel {
+        top:50px;
+        margin-bottom: 60px;
+    }
+
+    .carousel-caption h1 {
+        font-size: 150%;
     }
 }
