--- a/jquery-gcal-flow-3.0.1/jquery.gcal_flow.css
+++ b/jquery-gcal-flow-3.0.1/jquery.gcal_flow.css
@@ -15,6 +15,11 @@
     background-color: transparent;
     text-decoration: none;
 }
+@media (max-width: 768px) {
+    .gCalFlow a, .gCalFlow a:visited, .gCalFlow a:hover, .gcf-item-description, .gcf-item-location {
+        color: white;
+    }
+}
 
 .gCalFlow a:hover {
     text-decoration: underline;
@@ -81,7 +86,7 @@
 }
 
 .gCalFlow .gcf-item-title-block {
-    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.9);
+    /*text-shadow: 0 1px 0 rgba(255, 255, 255, 0.9);*/
     font-size: 1.3em;
 
 }
@@ -101,10 +106,10 @@
     border-style: solid;
     border-width: 0px;
     border-color: #ccc #999 #999 #ccc;
-    background: #f7f7f7;
+    /*background: #f7f7f7;*/
     filter: progid:DXImageTransform.Microsoft.Gradient(GradientType=0, StartColorStr=#ffffffff, EndColorStr=#ffeeeeee);
     zoom: 1;
-    color: #2d3032;
+    /*color: #2d3032;*/
     margin-bottom: 20px;
     padding-bottom: 20px;
 }
@@ -126,4 +131,15 @@
 
 .gCalFlow .gcf-item-body-block {
     color: #3333;
+}
+
+#gcf-nate-events {
+    height: auto;
+    margin-bottom: 0;
+    padding-bottom: 5px;
+}
+
+.gcf-item-container-block {
+    padding-left: 5px;
+    width: auto;
 }
