.mobile-only margins adjusted

--- a/style.css
+++ b/style.css
@@ -154,6 +154,7 @@ body {
 
     .mobile-only {
         display: block;
+        margin: 40px 20px;
     }
 }
 /*==========================================================*/
