converted to angularjs 1.5; updated index.html to use local version of angular 1.5 and jquery 3.3.1; added .map files for bootstrap and jquery;

--- a/app/appModule/footer/footer.component.html
+++ b/app/appModule/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <!-- FOOTER -->
     <footer class="footer">
-        <p><a href="http://18.220.25.115/">&copy; 2017 Brian Thomas &middot;</a>
-            <span class="pull-right"><a href="#">Back to top</a></span></p>
+        <p><a href="http://18.220.25.115/">&copy; 2018 Brian Thomas &middot;</a>
+            <!-- <span class="pull-right"><a href="#">Back to top</a></span>--></p>
     </footer>
 </div>
