--- a/app/appModule/home/home.component.html
+++ b/app/appModule/home/home.component.html
@@ -59,8 +59,12 @@
     <div class="row">
         <div class="col-sm-3">
             <!-- height attr is not HTML5 compliant but functions; replacing with style tag doesn't work -->
-            <a class="twitter-timeline" href="https://twitter.com/NateEubanks" data-widget-id="649626255378247680" height="500">Tweets by @NateEubanks</a>
-            <script>
+            <twitter-timeline>
+                <a class="twitter-timeline" href="https://twitter.com/NateEubanks" data-widget-id="649626255378247680" height="500">
+                    Tweets by @NateEubanks
+                </a>
+            </twitter-timeline>
+            <!-- <script>
                 ! function(d, s, id) {
                     var js, fjs = d.getElementsByTagName(s)[0],
                         p = /^http:/.test(d.location) ? 'http' : 'https';
@@ -71,7 +75,7 @@
                         fjs.parentNode.insertBefore(js, fjs);
                     }
                 }(document, "script", "twitter-wjs");
-            </script>
+            </script> -->
         </div>
 
         <hr class="featurette-divider mobile-only" />
