set show-replies to true for twitter embed

--- a/app/appModule/home/home.component.html
+++ b/app/appModule/home/home.component.html
@@ -58,9 +58,9 @@
 
     <div class="row">
         <div class="col-sm-3">
-            <!-- height attr is not HTML5 compliant but functions; replacing with style tag doesn't work -->
             <twitter-timeline>
-                <a class="twitter-timeline" href="https://twitter.com/NateEubanks" data-widget-id="649626255378247680" height="500">
+                <a class="twitter-timeline" href="https://twitter.com/NateEubanks" data-widget-id="649626255378247680"
+                height="500" show-replies=true>
                     Tweets by @NateEubanks
                 </a>
             </twitter-timeline>
