--- a/app/appModule/home/home.component.html
+++ b/app/appModule/home/home.component.html
@@ -59,23 +59,10 @@
     <div class="row">
         <div class="col-sm-3">
             <twitter-timeline>
-                <a class="twitter-timeline" href="https://twitter.com/NateEubanks" data-widget-id="649626255378247680"
-                height="500" show-replies=true>
+                <a class="twitter-timeline" href="https://twitter.com/NateEubanks" data-widget-id="649626255378247680" height="500" show-replies=true>
                     Tweets by @NateEubanks
                 </a>
             </twitter-timeline>
-            <!-- <script>
-                ! function(d, s, id) {
-                    var js, fjs = d.getElementsByTagName(s)[0],
-                        p = /^http:/.test(d.location) ? 'http' : 'https';
-                    if (!d.getElementById(id)) {
-                        js = d.createElement(s);
-                        js.id = id;
-                        js.src = p + "://platform.twitter.com/widgets.js";
-                        fjs.parentNode.insertBefore(js, fjs);
-                    }
-                }(document, "script", "twitter-wjs");
-            </script> -->
         </div>
 
         <hr class="featurette-divider mobile-only" />
@@ -126,20 +113,15 @@
 
         <hr class="featurette-divider">
 
-        <!--<div class="row featurette">-->
-        <!--<div class="col-md-7">-->
-        <!--<h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>-->
-        <!--<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
-                euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>-->
-        <!--</div>-->
-        <!--<div class="col-md-5">-->
-        <!--<img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto"
-                src="images/natesmile.jpg" alt="Generic placeholder image">-->
-        <!--</div>-->
-        <!--</div>-->
-
-        <!--<hr class="featurette-divider">-->
-
         <!-- /END THE FEATURETTES -->
+    </div>
+
+    <h3>simple gCal</h3>
+    <script type="text/javascript">
+        $('#gcf-simple').gCalFlow({
+            calid: 'linuxfoundation.org_34363837313836302d343036@resource.calendar.google.com'
+        });
+    </script>
+    <div id="gcf-simple">
     </div>
 </div>
