--- a/app/appModule/navigation/navigation.component.html
+++ b/app/appModule/navigation/navigation.component.html
@@ -1,13 +1,14 @@
 <!-- gCalFlow
 ================================================== -->
 <script>
-    _gCalFlow_debug = false;
+    _gCalFlow_debug = true;
 </script>
-<script type="text/javascript" src="jquery-gcal-flow-3.0.1/jquery.gcal_flow.js"></script>
+<script type="text/javascript" src="jquery-gcal-flow-3.0.2/jquery.gcal_flow.js"></script>
 
 <script type="text/javascript">
     $(function() {
         $('#gcf-nate-events').gCalFlow({
+            <!-- calid: 'j4ttdotndrai1e6grt7bp7i6ko@group.calendar.google.com', -->
             calid: 'j4ttdotndrai1e6grt7bp7i6ko@group.calendar.google.com',
             // callback: loadLinks(),
             // Comment out the apikey line below only for testing
@@ -42,6 +43,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="mailto:nathan.eubanks@gmail.com">nathan.eubanks@gmail.com</a></li>
                             <li><a href="https://twitter.com/NateEubanks" target="_blank">@NateEubanks</a></li>
+                            <li ng-click="vm.getEvents()">get events</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
