--- a/nateeubanksNG/src/app/app.component.html
+++ b/nateeubanksNG/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<app-navbar>nav bar failed to render</app-navbar>
 <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
