added some more components, and messed with card layout in ReviewsComponent;

--- a/nateeubanksNG/src/app/navbar/navbar.component.html
+++ b/nateeubanksNG/src/app/navbar/navbar.component.html
@@ -56,6 +56,6 @@
 </mat-menu>
 
 <mat-menu #contacts="matMenu">
-    <a mat-menu-item routerLink="mailto:nathan.eubanks@gmail.com">Email</a>
+    <a mat-menu-item href="mailto:nathan.eubanks@gmail.com">Email</a>
     <a mat-menu-item href="https://twitter.com/NateEubanks">@NateEubanks</a>
 </mat-menu>
