--- a/nateeubanksNG/src/app/reviews/reviews.component.html
+++ b/nateeubanksNG/src/app/reviews/reviews.component.html
@@ -1,5 +1,56 @@
-<div class="container marketing">
+<div class="container">
+    <mat-card class="example-card">
+        <mat-card-header>
+            <div mat-card-avatar class="example-header-image"></div>
+            <mat-card-title>Nate delivered</mat-card-title>
+            <mat-card-subtitle>Sean Morahan</mat-card-subtitle>
+        </mat-card-header>
+        <!-- <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu"> -->
+        <img mat-card-image src="http://seanmorahan.com/wp-content/uploads/2014/06/sean-morahan-003.jpg" alt="Photo of a Shiba Inu">
+        <mat-card-content>
+            <p>
+                In early 2017 Nate Eubanks contacted me about performing in my curated rooms in Sydney. I viewed his video and advised him his material was too dark for the audiences
+                    we deliberately attract to our rooms. Nate assured me had a sufficient
+                    range of material and enough experience to tailor a set to each room's audience. I was impressed with his experience and polite and professional approach, so decided to test him
+                    out with a short spot. Nate delivered a really tight,
+                    laugh-filled set and tailored his material to the audience. Nate quickly earned longer spots and he kept delivering great sets all over Sydney. Our audiences loved him: many
+                    thanked and congratulated him after our shows and several
+                    bought him drinks. He continually impressed me with his versatility as a comedy performer. Nate also worked well with our other comedians, making him a popular colleague. To top
+                    it off, Nate was always helpful with our shows: set
+                    up, pack down, promotion, etc. Performing with Nate in other rooms I observed that his professional approach to comedy was consistent, irrespective of the room in which he was
+                    performing. He was ultra-reliable and a pleasure to
+                    have on our line-up as often as he was available (he quickly became a popular bookers’ choice in Sydney). Based on my experience with Nate over his year in Sydney, I am happy to
+                    recommend him to any comedy promoter / room runner
+                    who wants a reliable, funny and helpful comedian with broad appeal on their line-up.
+            </p>
+        </mat-card-content>
+        <mat-card-actions>
+            <button mat-button>LIKE</button>
+            <button mat-button>SHARE</button>
+        </mat-card-actions>
+    </mat-card>
 
+    <mat-card class="example-card">
+        <mat-card-header>
+            <div mat-card-avatar class="example-header-image"></div>
+            <mat-card-title>Shiba Inu</mat-card-title>
+            <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+        </mat-card-header>
+        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <mat-card-content>
+            <p>
+                The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+                A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+                bred for hunting.
+            </p>
+        </mat-card-content>
+        <mat-card-actions>
+            <button mat-button>LIKE</button>
+            <button mat-button>SHARE</button>
+        </mat-card-actions>
+    </mat-card>
+</div>
+<div class="container marketing">
     <hr class="featurette-divider">
 
     <div class="row featurette">
@@ -7,15 +58,21 @@
             <h2 class="featurette-heading">Nate delivered</h2>
             <h4><span class="text-muted"><a href="http://www.alaughandahalf.com/" target="_blank">Sean Morahan</a></span></h4>
             <blockquote class="blockquote">
-                <p class="lead">In early 2017 Nate Eubanks contacted me about performing in my curated rooms in Sydney. I viewed his video and advised him his material was too dark for the audiences we deliberately attract to our rooms. Nate assured me had a sufficient
-                    range of material and enough experience to tailor a set to each room's audience. I was impressed with his experience and polite and professional approach, so decided to test him out with a short spot. Nate delivered a really tight,
-                    laugh-filled set and tailored his material to the audience. Nate quickly earned longer spots and he kept delivering great sets all over Sydney. Our audiences loved him: many thanked and congratulated him after our shows and several
-                    bought him drinks. He continually impressed me with his versatility as a comedy performer. Nate also worked well with our other comedians, making him a popular colleague. To top it off, Nate was always helpful with our shows: set
-                    up, pack down, promotion, etc. Performing with Nate in other rooms I observed that his professional approach to comedy was consistent, irrespective of the room in which he was performing. He was ultra-reliable and a pleasure to
-                    have on our line-up as often as he was available (he quickly became a popular bookers’ choice in Sydney). Based on my experience with Nate over his year in Sydney, I am happy to recommend him to any comedy promoter / room runner
-                    who wants a reliable, funny and helpful comedian with broad appeal on their line-up.
+                <p class="lead">In early 2017 Nate Eubanks contacted me about performing in my curated rooms in Sydney. I viewed his video and advised him his material was too dark for the audiences
+                    we deliberately attract to our rooms. Nate assured me had a sufficient
+                    range of material and enough experience to tailor a set to each room's audience. I was impressed with his experience and polite and professional approach, so decided to test him
+                    out with a short spot. Nate delivered a really tight,
+                    laugh-filled set and tailored his material to the audience. Nate quickly earned longer spots and he kept delivering great sets all over Sydney. Our audiences loved him: many
+                    thanked and congratulated him after our shows and several
+                    bought him drinks. He continually impressed me with his versatility as a comedy performer. Nate also worked well with our other comedians, making him a popular colleague. To top
+                    it off, Nate was always helpful with our shows: set
+                    up, pack down, promotion, etc. Performing with Nate in other rooms I observed that his professional approach to comedy was consistent, irrespective of the room in which he was
+                    performing. He was ultra-reliable and a pleasure to
+                    have on our line-up as often as he was available (he quickly became a popular bookers’ choice in Sydney). Based on my experience with Nate over his year in Sydney, I am happy to
+                    recommend him to any comedy promoter / room runner
+                    who wants a reliable, funny and helpful comedian with broad appeal on their line-up.</p>
 
-                    <p>Sean Morahan</p><small>A Laugh And A Half, Sydney</small>
+                <p>Sean Morahan</p><small>A Laugh And A Half, Sydney</small>
             </blockquote>
         </div>
         <div class="col-md-5 col-md-pull-7">
@@ -30,10 +87,11 @@
             <h2 class="featurette-heading">Truly a funny dude</h2>
             <h4><span class="text-muted"><a href="https://twitter.com/robkschulte">@robkschulte</a></span></h4>
             <blockquote class="blockquote">
-                <p class="lead">I've seen Nate multiple times, and each time he finds a new way to make me laugh. I'm happy to perform on the same stage with him, have him as a guest on the podcast, or just sit in the audience. Truly a funny dude.</p>
+                <p class="lead">I've seen Nate multiple times, and each time he finds a new way to make me laugh. I'm happy to perform on the same stage with him, have him as a guest on the podcast,
+                    or just sit in the audience. Truly a funny dude.</p>
                 <p>Rob Schulte<br /> <small>Executive Producer <cite>Doin' It with Mike Sacks... and
-                Rob</cite></small><small>Audio Producer <cite>Can't Sleep</cite></small><small>Producer <cite>Mr
-                Corpo</cite> podcast</small></p>
+                            Rob</cite></small><small>Audio Producer <cite>Can't Sleep</cite></small><small>Producer <cite>Mr
+                            Corpo</cite> podcast</small></p>
             </blockquote>
         </div>
         <div class="col-md-5">
@@ -48,13 +106,15 @@
             <h2 class="featurette-heading">Nate Freakin' Eubanks</h2>
             <h4><span class="text-muted"><a href="https://twitter.com/Pinklepus" target="_blank">@Pinklepus</a></span></h4>
             <blockquote class="blockquote">
-                <p class="lead">Nate Eubanks is one of the funniest people I know. When you've been doing comedy for as long as I have, you hear a lot of jokes. You want to know how funny Nate is? I think about one of Nate's jokes at least once a week. You want proof?
-                    Nate asked me to help him with this website thing and with full intention to help him, I totally forgot. Just straight up forgot. THEN I started thinking about cats, and you know who has the best joke about cats? You bet your britches
+                <p class="lead">Nate Eubanks is one of the funniest people I know. When you've been doing comedy for as long as I have, you hear a lot of jokes. You want to know how funny Nate is? I
+                    think about one of Nate's jokes at least once a week. You want proof?
+                    Nate asked me to help him with this website thing and with full intention to help him, I totally forgot. Just straight up forgot. THEN I started thinking about cats, and you know
+                    who has the best joke about cats? You bet your britches
                     it's Nate freakin' Eubanks.</p>
                 <p>Tristan Newell</p><small>Debate League Stand-Up National Champion</small>
                 <small>Producer <cite>Big Hot Bits</cite></small><small>Featured for <cite>Kyle Kinane</cite></small>
                 <small>Appeared in nationally touring shows <cite>7 Minutes in Purgatory</cite> and
-                <cite>Underwear Comedy Party</cite></small><small>Kansas City Improv</small>
+                    <cite>Underwear Comedy Party</cite></small><small>Kansas City Improv</small>
             </blockquote>
         </div>
         <div class="col-md-5 col-md-pull-7">
@@ -68,16 +128,17 @@
         <div class="col-md-7">
             <h2 class="featurette-heading">He’s going to kill it</h2>
             <h4><span class="text-muted">
-            <a href="https://twitter.com/mattkecksucks" target="_blank">@mattkecksucks</a>
-            </span>
-        </h4>
+                    <a href="https://twitter.com/mattkecksucks" target="_blank">@mattkecksucks</a>
+                </span>
+            </h4>
             <blockquote class="blockquote">
-                <p class="lead">Nate is one of the most versatile performers we’ve ever had on our show. He’s done standup, our roast battle, and helped by writing and performing sketches. He’s the type of comic I love to book, because I know he’s is going to perform
+                <p class="lead">Nate is one of the most versatile performers we’ve ever had on our show. He’s done standup, our roast battle, and helped by writing and performing sketches. He’s the
+                    type of comic I love to book, because I know he’s is going to perform
                     well no matter what crazy thing I ask him to do. I can put him on a show and not have to worry about that part, because I know he’s going to kill it.
                 </p>
                 <p>Matt Keck</p><small>Appearances on <cite>Tosh.0</cite>, <cite>Web Soup</cite> and
-                <cite>Ridiculousness</cite> for his YouTube videos, which have amassed over 30
-                million views.</small>
+                    <cite>Ridiculousness</cite> for his YouTube videos, which have amassed over 30
+                    million views.</small>
             </blockquote>
         </div>
         <div class="col-md-5">
@@ -92,8 +153,10 @@
             <h2 class="featurette-heading">Loved his style</h2>
             <h4><span class="text-muted"><a href="https://twitter.com/AliFingerz" target="_blank">@AliFingerz</a></span></h4>
             <blockquote class="blockquote">
-                <p class="lead">It was an absolute pleasure to meet and share the stage with Nate in Doha, Qatar. I had heard of him from a comedian friend of mine in Kuwait and watching him work was an eye-opener. His versatile material hits you with the subtlety
-                    of a bat. I was happy to book him on my show in Bahrain shortly after. The crowd loved his style and the contrast between him and other comedians in the GCC. I'm more than confident that we will share the stage and laugh together
+                <p class="lead">It was an absolute pleasure to meet and share the stage with Nate in Doha, Qatar. I had heard of him from a comedian friend of mine in Kuwait and watching him work was
+                    an eye-opener. His versatile material hits you with the subtlety
+                    of a bat. I was happy to book him on my show in Bahrain shortly after. The crowd loved his style and the contrast between him and other comedians in the GCC. I'm more than
+                    confident that we will share the stage and laugh together
                     again and I hope that happens sooner rather than later...in whatever part of the world that may be.</p>
                 <p>Ali Fingerz</p>
                 <small>Host of <cite>Bahrain For All, Run DMC and Bumblefoot of Guns n Roses</cite></small>
