--- a/nateeubanksNG/src/app/reviews/reviews.component.scss
+++ b/nateeubanksNG/src/app/reviews/reviews.component.scss
@@ -1,5 +1,6 @@
 .example-card {
-    max-width: 400px;
+    max-width: 50vw;
+    margin: 1em;
 }
 
 .example-header-image {
@@ -9,4 +10,12 @@
 
 .container {
     margin: 0.5em;
+}
+
+a.mat-card-title {
+    text-decoration: none;
+    color: inherit;
+    &:hover {
+        color:rgb(97, 97, 110);
+    }
 }
