footer styling, comments, set twitter feed to hannibal burress until nate opens up his twitter

--- a/nateeubanksNG/src/app/footer/footer.component.html
+++ b/nateeubanksNG/src/app/footer/footer.component.html
@@ -1,3 +1,5 @@
-<footer>
-    <p><a href="http://18.220.25.115/">&copy; 2019 Brian Thomas</a></p>
-</footer>
+<div class="container-fluid">
+    <footer>
+        <p><a class="text-muted" href="http://18.220.25.115/">&copy; 2019 Brian Thomas</a></p>
+    </footer>
+</div>
