flex layout changes;

--- a/nateeubanksNG/src/app/reviews/reviews.component.html
+++ b/nateeubanksNG/src/app/reviews/reviews.component.html
@@ -1,72 +1,79 @@
-<div class="container" fxLayout="row">
-    <mat-card class="example-card" fxLayout.xs="column">
-        <mat-card-header>
-            <div mat-card-avatar class="example-header-image"></div>
-            <a mat-card-title href="https://twitter.com/seanmorahan?lang=en" target="_blank">Sean Morahan</a>
-            <mat-card-subtitle>A Laugh And A Half, Sydney</mat-card-subtitle>
-        </mat-card-header>
-        <!-- <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu"> -->
-        <img mat-card-image src="http://seanmorahan.com/wp-content/uploads/2014/06/sean-morahan-003.jpg" alt="Photo of a Shiba Inu" />
-        <mat-card-content>
-            <h2>Nate delivered</h2>
-            <p>
-                In early 2017 Nate Eubanks contacted me about performing in my curated rooms in Sydney. I viewed his video and advised him his material was too dark for the audiences we deliberately
-                attract to our rooms. Nate assured me had a sufficient range of material and enough experience to tailor a set to each room's audience. I was impressed with his experience and polite
-                and professional approach, so decided to test him out with a short spot. Nate delivered a really tight, laugh-filled set and tailored his material to the audience. Nate quickly earned
-                longer spots and he kept delivering great sets all over Sydney. Our audiences loved him: many thanked and congratulated him after our shows and several bought him drinks. He
-                continually impressed me with his versatility as a comedy performer. Nate also worked well with our other comedians, making him a popular colleague. To top it off, Nate was always
-                helpful with our shows: set up, pack down, promotion, etc. Performing with Nate in other rooms I observed that his professional approach to comedy was consistent, irrespective of the
-                room in which he was performing. He was ultra-reliable and a pleasure to have on our line-up as often as he was available (he quickly became a popular bookers’ choice in Sydney). Based
-                on my experience with Nate over his year in Sydney, I am happy to recommend him to any comedy promoter / room runner who wants a reliable, funny and helpful comedian with broad appeal
-                on their line-up.
-            </p>
-        </mat-card-content>
-        <mat-card-actions>
-            <a mat-button href="http://www.alaughandahalf.com/" target="_blank">A Laugh And A Half, Sydney</a>
-            <a mat-button href="https://twitter.com/seanmorahan?lang=en" target="_blank">@SeanMorahan</a>
-        </mat-card-actions>
-    </mat-card>
+<div class="" fxLayout="row" fxLayout.xs="column" fxFlexFill>
+    <div fxFlex="50">
+        <mat-card class="example-card">
+            <mat-card-header>
+                <div mat-card-avatar class="example-header-image"></div>
+                <a mat-card-title href="https://twitter.com/seanmorahan?lang=en" target="_blank">Sean Morahan</a>
+                <mat-card-subtitle>A Laugh And A Half, Sydney</mat-card-subtitle>
+            </mat-card-header>
+            <img mat-card-image src="/assets/images/seanMorahan.jpg" alt="Photo of a Shiba Inu" />
+            <mat-card-content>
+                <h2>Nate delivered</h2>
+                <p>
+                    In early 2017 Nate Eubanks contacted me about performing in my curated rooms in Sydney. I viewed his video and advised him his material was too dark for the audiences we
+                    deliberately attract to our rooms. Nate assured me had a sufficient range of material and enough experience to tailor a set to each room's audience. I was impressed with his
+                    experience and polite and professional approach, so decided to test him out with a short spot. Nate delivered a really tight, laugh-filled set and tailored his material to the
+                    audience. Nate quickly earned longer spots and he kept delivering great sets all over Sydney. Our audiences loved him: many thanked and congratulated him after our shows and
+                    several bought him drinks. He continually impressed me with his versatility as a comedy performer. Nate also worked well with our other comedians, making him a popular colleague.
+                    To top it off, Nate was always helpful with our shows: set up, pack down, promotion, etc. Performing with Nate in other rooms I observed that his professional approach to comedy
+                    was consistent, irrespective of the room in which he was performing. He was ultra-reliable and a pleasure to have on our line-up as often as he was available (he quickly became a
+                    popular bookers’ choice in Sydney). Based on my experience with Nate over his year in Sydney, I am happy to recommend him to any comedy promoter / room runner who wants a reliable,
+                    funny and helpful comedian with broad appeal on their line-up.
+                </p>
+            </mat-card-content>
+            <mat-card-actions>
+                <a mat-button href="http://www.alaughandahalf.com/" target="_blank">A Laugh And A Half, Sydney</a>
+                <a mat-button href="https://twitter.com/seanmorahan?lang=en" target="_blank">@SeanMorahan</a>
+            </mat-card-actions>
+        </mat-card>
+    </div>
 
-    <mat-card class="example-card" fxLayout.xs="column">
-        <mat-card-header>
-            <div mat-card-avatar class="example-header-image"></div>
-            <a mat-card-title href="https://twitter.com/Pinklepus" target="_blank">Rob K Schulte</a>
-            <mat-card-subtitle>Producer, Comedian</mat-card-subtitle>
-        </mat-card-header>
-        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu" />
-        <mat-card-content>
-            <h2>Truly a funny dude</h2>
-            <p>
-                I've seen Nate multiple times, and each time he finds a new way to make me laugh. I'm happy to perform on the same stage with him, have him as a guest on the podcast, or just sit in
-                the audience. Truly a funny dude.
-            </p>
-        </mat-card-content>
-        <mat-card-actions>
-            <button mat-button>Doin' It with Mike Sacks... and Rob</button> <button mat-button>Can't Sleep</button> <button mat-button>Mr Corpo</button>
-            <button mat-button href="https://twitter.com/robkschulte">@robkschulte</button>
-        </mat-card-actions>
-    </mat-card>
+    <div fxFlex="50">
+        <mat-card class="example-card">
+            <mat-card-header>
+                <div mat-card-avatar class="example-header-image"></div>
+                <a mat-card-title href="https://twitter.com/Pinklepus" target="_blank">Rob K Schulte</a>
+                <mat-card-subtitle>Producer, Comedian</mat-card-subtitle>
+            </mat-card-header>
+            <mat-card-content>
+                <h2>Truly a funny dude</h2>
+                <p>
+                    I've seen Nate multiple times, and each time he finds a new way to make me laugh. I'm happy to perform on the same stage with him, have him as a guest on the podcast, or just sit
+                    in the audience. Truly a funny dude.
+                </p>
+            </mat-card-content>
+            <img mat-card-image src="/assets/images/robs.jpg" alt="Photo of a Shiba Inu" />
+            <mat-card-actions>
+                <button mat-button>Doin' It with Mike Sacks... and Rob</button> <button mat-button>Can't Sleep</button> <button mat-button>Mr Corpo</button>
+                <button mat-button href="https://twitter.com/robkschulte">@robkschulte</button>
+            </mat-card-actions>
+        </mat-card>
+    </div>
+<!-- </div> -->
 
-    <mat-card class="example-card" fxLayout.xs="column">
-        <mat-card-header>
-            <div mat-card-avatar class="example-header-image"></div>
-            <a mat-card-title href="https://twitter.com/Pinklepus" target="_blank">Tristan Newell</a>
-            <mat-card-subtitle>Debate League Stand-Up National Champion</mat-card-subtitle>
-        </mat-card-header>
-        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu" />
-        <mat-card-content>
-            <h2>Nate Freakin' Eubanks</h2>
-            <p>
-                Nate Eubanks is one of the funniest people I know. When you've been doing comedy for as long as I have, you hear a lot of jokes. You want to know how funny Nate is? I think about one
-                of Nate's jokes at least once a week. You want proof? Nate asked me to help him with this website thing and with full intention to help him, I totally forgot. Just straight up forgot.
-                THEN I started thinking about cats, and you know who has the best joke about cats? You bet your britches it's Nate freakin' Eubanks.
-            </p>
-        </mat-card-content>
-        <mat-card-actions>
-            <button mat-button>Doin' It with Mike Sacks... and Rob</button> <button mat-button>Can't Sleep</button> <button mat-button>Mr Corpo</button>
-            <a mat-button href="https://twitter.com/Pinklepus" target="_blank">@Pinklepus</a>
-        </mat-card-actions>
-    </mat-card>
+<!-- <div class="" fxLayout="row" fxLayout.xs="column" fxFlexFill> -->
+    <div fxFlex="50">
+        <mat-card class="example-card">
+            <mat-card-header>
+                <div mat-card-avatar class="example-header-image"></div>
+                <a mat-card-title href="https://twitter.com/Pinklepus" target="_blank">Tristan Newell</a>
+                <mat-card-subtitle>Debate League Stand-Up National Champion</mat-card-subtitle>
+            </mat-card-header>
+            <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu" />
+            <mat-card-content>
+                <h2>Nate Freakin' Eubanks</h2>
+                <p>
+                    Nate Eubanks is one of the funniest people I know. When you've been doing comedy for as long as I have, you hear a lot of jokes. You want to know how funny Nate is? I think about
+                    one of Nate's jokes at least once a week. You want proof? Nate asked me to help him with this website thing and with full intention to help him, I totally forgot. Just straight up
+                    forgot. THEN I started thinking about cats, and you know who has the best joke about cats? You bet your britches it's Nate freakin' Eubanks.
+                </p>
+            </mat-card-content>
+            <mat-card-actions>
+                <button mat-button>Doin' It with Mike Sacks... and Rob</button> <button mat-button>Can't Sleep</button> <button mat-button>Mr Corpo</button>
+                <a mat-button href="https://twitter.com/Pinklepus" target="_blank">@Pinklepus</a>
+            </mat-card-actions>
+        </mat-card>
+    </div>
 </div>
 
 <div class="row featurette">
