--- a/nateeubanksNG/src/app/app.component.scss
+++ b/nateeubanksNG/src/app/app.component.scss
@@ -16,15 +16,15 @@ body, input[type='text'], button {
     font-family: Cambria, Georgia;
 }
 
-.site-content {
-    flex: 1;
-}
+// .site-content {
+//     flex: 1;
+// }
 
-:host {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
-}
+// :host {
+//     display: flex;
+//     min-height: 100vh;
+//     flex-direction: column;
+// }
 /* everywhere else */
 * {
     font-family: Arial, Helvetica, sans-serif;
