--- a/nateeubanksNG/src/app/reviews/reviews.component.scss
+++ b/nateeubanksNG/src/app/reviews/reviews.component.scss
@@ -1,5 +1,5 @@
 .example-card {
-    max-width: 50vw;
+    // max-width: 50vw;
     margin: 1em;
 }
 
@@ -8,8 +8,8 @@
     background-size: cover;
 }
 
-.container {
-    margin: 0.5em;
+.card-container {
+    min-width: 50%;
 }
 
 a.mat-card-title {
